--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         applicationId "cn.org.obaby.adsskiper"
         minSdk 21
-        targetSdk 30
+        targetSdk 28
         versionCode 1
         versionName "1.0"
 
@@ -37,7 +37,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'com.github.tyhjh:ScreenShot:v1.0.0'
+    implementation 'com.tencent.tinker:tinker-android-lib:1.9.9'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.6'
+    implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
+    implementation 'com.android.support:multidex:1.0.1'
 }
