--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.6'
     implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
     implementation 'com.android.support:multidex:1.0.1'
+
+    implementation 'org.pytorch:pytorch_android_lite:1.9.0'
+    implementation 'org.pytorch:pytorch_android_torchvision:1.9.0'
 }
