增加tf-lite方式集成
增加tf-lite方式集成， 完善测试代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
 
         </activity>
 
+        <activity android:name=".detection.TfMainActivity">
+            android:theme="@style/Theme.AdsSkiper.NoActionBar">
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
