--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,16 @@ buildscript {
     }
 }
 
+project.ext {
+    //AppInfoSdk
+//    compileSdkVersion 30
+//    buildToolsVersion "30.0.3"
+//    minSdkVersion 16
+//    targetSdkVersion 30
+    libVersionCode = 1
+    libVersionName = '1.0.0'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
