--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,15 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    dataBinding {
+        enabled = true;
+    }
 }
 
 dependencies {
+
+    implementation project(':AppInfoSDK')
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -54,4 +60,10 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:2.4.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
     androidTestImplementation 'com.google.truth:truth:1.0.1'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    // Glide dependency
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
