--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,20 @@
 
         <activity android:name=".detection.TfMainActivity">
             android:theme="@style/Theme.AdsSkiper.NoActionBar">
+
+
+        </activity>
+
+        <activity android:name=".whitelist.view.WhiteListMainActivity">
+            android:theme="@style/Theme.AdsSkiper.NoActionBar">
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -65,6 +79,10 @@
                 android:resource="@xml/allocation"/>
 
         </service>
+
+        <service android:name="com.example.appinfosdk.controller.services.CheckAppInstallService"
+            android:enabled="false"
+            android:exported="true"/>
 
 
     </application>
